added a replay button, added the option to choose first player

--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 		<link rel="stylesheet" href="css/my-framework.css" />
 		<!-- Main CSS File -->
 		<link rel="stylesheet" href="css/style.css" />
-		<title>New Page</title>
+		<title>Connect 4 Game</title>
 	</head>
 	<body>
-		<header>
-			<nav></nav>
-		</header>
 		<main>
 			<section class="game" id="game">
 				<div class="container">
@@ -22,12 +19,10 @@
 						<button class="start-game-button">Start Game</button>
 						<button class="restart-game-button">Restart Game</button>
 					</div>
-					</div>
 				</div>
 				<audio src="resources/audio/connect-four.mp3" id="sound-effect"></audio>
 			</section>
 		</main>
-		<footer></footer>
 		<script src="js/main.js"></script>
 	</body>
 </html>
