edited some comments, and added ids to elements

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<body>
 		<main>
 			<section class="game" id="game">
-				<div class="container">
-					<div class="placeholder"></div>
+				<div class="container" id="container">
+					<div class="placeholder" id="placeholder"></div>
 					<div id="game-board" class="game-board"></div>
 					<div class="buttons">
-						<button class="start-game-button">Start Game</button>
-						<button class="restart-game-button">Restart Game</button>
+						<button class="start-game-button" id="start-game-button">Start Game</button>
+						<button class="restart-game-button" id="restart-game-button">Restart Game</button>
 					</div>
 				</div>
 				<audio src="resources/audio/connect-four.mp3" id="sound-effect"></audio>
